# CUDA-K-SVD-Denoising

./: .gitignore  README.md
matlab/: compare.m  noised_image.m  untitled.m
risultati/: gesvd_real.txt
risultati/Double/: gesvdj_real.txt
sorgenti/: CMakeLists.txt  config (copia).json  config.1.json  config.json  config2.json  main.cpp  main.cu
sorgenti/lib/: cusolver_dn_dgesvd_engine.cu  cusolver_gesvd_engine.cu  cusolver_gesvdj_engine.cu  mat_mat_cuda.cu  matrix.cpp  svdLib.h  svd_container.cpp  svd_cuda_engine.cu  svd_engine.cpp  time_elapsed.cpp
sorgenti/lib/baseUtilityLib/: baseUtilityLib.h  matrix.cpp  matrix.cu
sorgenti/lib/denoisingLib/: batch_denoiser.cpp  cuda_svd_denoiser.cu  denoiser.cpp  denoisingLib.h  mixed_denoiser.txt
sorgenti/lib/matUtilityLib/: cublas_matrix_add.cu  cublas_matrix_mult.cu  cublas_matrix_omp.cu  cublas_matrix_ops.cu  matUtilityLib.h  matrix_ops.cpp  mixed_matrix_omp.txt
sorgenti/lib/svdLib/: cusolver_gesvd_engine.cu  cusolver_gesvda_batch_engine.cu  cusolver_gesvdj_batch_engine.cu  cusolver_gesvdj_engine.cu  matrix.cpp  svdLib.h  svd_container.cpp  svd_cuda_engine.cu  svd_engine.cpp  time_elapsed.cpp
sorgenti/lib/utilityLib/: cublas_matrix_add.cu  cublas_matrix_mult.cu  cublas_matrix_omp.cu  matrix.cpp  matrix_mult.cpp  matrix_ops.cpp  time_elapsed.cpp  utilityLib.h
src/: CMakeLists.txt  config2.json  main.cpp
src/lib/baseUtilityLib/: matrix.cu  time_elapsed.cpp
src/lib/denoisingLib/: batch_denoiser.cpp  denoiser.cpp
src/lib/matUtilityLib/: matUtilityLib.h
src/lib/svdLib/: cusolver_gesvda_batch_engine.cu  cusolver_gesvdj_engine.cu  svd_container.cpp  svd_engine.cpp
test/SVD/Double/: errorCompare.txt
test/SVD/Float/: floatComp.txt
test/images/: TEST.xlsx
uml/src/: BuildImageDenoisedDiagram.puml  DenoisingDiagram.puml  InitializationDiagram.puml  OverviewDiagram.puml  baseUtilityLib.puml  classDiagram.puml  denoisingLib.puml  matUtilityLib.puml  svdLib.puml  utilityLib.puml
